force-app/main/default/objects/b3s__Break__c/b3s__Break__c.object-meta.xml
<CustomObject>
    <label>Break</label>
    <nameField>
        <displayFormat>BR-{00000}</displayFormat>
        <label>Break</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Break</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>