force-app/main/default/objects/b3s__Break__c/fields/b3s__End__c.field-meta.xml
<CustomField>
    <fullName>b3s__End__c</fullName>
    <label>End</label>
    <type>DateTime</type>
</CustomField>