force-app/main/default/objects/b3s__Break__c/fields/b3s__Is_Auto_Created__c.field-meta.xml
<CustomField>
    <fullName>b3s__Is_Auto_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The break was created as part of an automated process.</inlineHelpText>
    <label>Is Auto Created?</label>
    <type>Checkbox</type>
</CustomField>