force-app/main/default/objects/b3s__Break__c/fields/b3s__Shift__c.field-meta.xml
<CustomField>
    <fullName>b3s__Shift__c</fullName>
    <label>Shift</label>
    <referenceTo>b3s__Shift__c</referenceTo>
    <relationshipLabel>Break</relationshipLabel>
    <relationshipName>Break</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>